# arx-hecras

./: .gitignore  CLAUDE.md  HECRAS_Parallel_Runner.spec  HECRAS_Parallel_Runner_Debug.spec  README.md  hecras_gui_runner.py  pyproject.toml  run_hecras_parallel.py
docs/: architecture.html  architecture.md  cli_migration_research.html  cli_migration_research.md  codebase_analysis.md  db_schema.sql  distributed_execution_research.md  git_conventions.md  gui_round3_notes.md  hecras_automation_ecosystem.md  network_probe_design.md  network_probe_results.json  pyqt6_migration_assessment.md  test_blindspots.md  test_project.md  tool_evolution.md
src/: network_probe.py
src/hecras_runner/: __init__.py  __main__.py  cli.py  db.py  discovery.py  file_ops.py  gui.py  models.py  monitor.py  parser.py  runner.py  settings.py  transfer.py  version_check.py
test_projects/: small_project_01.g02.hdf  small_project_01.p01  small_project_01.p02  small_project_01.p03  small_project_01.p04  small_project_01.prj  small_project_01.rasmap  small_project_01.u01  small_project_01.u02  small_project_01.u03  small_project_01.u04
test_projects/Features/: Profile Lines.dbf  Profile Lines.shp  Profile Lines.shx
tests/: 100yCC_2024.dsc.h5  HECRAS_Parallel_Runner.spec  HECRAS_Parallel_Runner_Debug.spec  PRtest1.b01  PRtest1.b02  PRtest1.b03  PRtest1.b04  PRtest1.bco01  PRtest1.bco02  PRtest1.bco03  PRtest1.bco04  PRtest1.dsc.h5  PRtest1.dss  PRtest1.g01  PRtest1.g01.hdf  PRtest1.g02  PRtest1.g02.hdf  PRtest1.ic.o01  PRtest1.ic.o02  PRtest1.ic.o03  PRtest1.ic.o04  PRtest1.p01  PRtest1.p01.hdf  PRtest1.p02  PRtest1.p02.hdf  PRtest1.p03  PRtest1.p03.computeMsgs.txt  PRtest1.p03.hdf  PRtest1.p04  PRtest1.p04.computeMsgs.txt  PRtest1.p04.hdf  PRtest1.prj  PRtest1.rasmap  PRtest1.rasmap.backup  PRtest1.u01  PRtest1.u02  PRtest1.u03  PRtest1.u04  PRtest1.x01  Parallel_HECRAS.py  (+19 more)
tests/synthetic/: minimal.g01  minimal.p01  (+2 more)
(+3 files in other folders)
